--- a/tests/aggstream.yml
+++ b/tests/aggstream.yml
@@ -2,7 +2,7 @@ aggstream:
    data_source:
       type: stream
       stream_type: sqs
-      queue: https://us-east-2.queue.amazonaws.com/762683880968/divaqueue
+      queue: https://sqs.us-east-2.amazonaws.com/762683880968/divaqueue-unittest
    redis:
       host: localhost
       port: 6379
@@ -20,4 +20,4 @@ aggstream:
       - total_price
       - qty
    datetime_field_name: date
-   datetime_field_format: YYYY-mm-dd HH:MM:SS
+   datetime_field_format: YYYY-MM-DDTHH:mm:ss
